# Student-System

./: CMakeLists.txt  README.md  adminGet_Head.h  checkAdmin.h  check_Head.h  data_wr_Head.h  define.h  delete.h  delete_Head.h  file_Head.h  file_init.h  file_init_Head.h  find.h  find_Head.h  getAdmin.h  input.h  input_Head.h  login.h  login_Head.h  main.c  max.h  menu.h  menu_Head.h  output.h  output_Head.h  register.h  register_Head.h  revise.h  revise_Head.h  serialization.h  sort.h  sort_Head.h  struct.h  struct_Head.h
